# lab1

./: CMakeLists.txt
.github/workflows/: cmake.yml
include/: BigArray.h
src/: BigArray.cpp  main.cpp
tests/: tests.cpp
